# swagger.json
@@ -11,7 +11,47 @@
     "https"
   ],
   "paths": {
-    "/friends/": {
+    "/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/books/": {
       "get": {
         "description": "",
         "produces": [
@@ -38,19 +78,28 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "author": {
                   "example": "any"
                 },
-                "email": {
+                "genre": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "publishedYear": {
                   "example": "any"
                 },
-                "birthday": {
+                "language": {
+                  "example": "any"
+                },
+                "pages": {
+                  "example": "any"
+                },
+                "available": {
+                  "example": "any"
+                },
+                "summary": {
                   "example": "any"
                 }
               }
@@ -64,13 +113,16 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/friends/{id}": {
+    "/books/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -111,19 +163,28 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "title": {
                   "example": "any"
                 },
-                "lastName": {
+                "author": {
                   "example": "any"
                 },
-                "email": {
+                "genre": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "publishedYear": {
                   "example": "any"
                 },
-                "birthday": {
+                "language": {
+                  "example": "any"
+                },
+                "pages": {
+                  "example": "any"
+                },
+                "available": {
+                  "example": "any"
+                },
+                "summary": {
                   "example": "any"
                 }
               }
@@ -136,6 +197,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -159,13 +223,16 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/students/": {
+    "/authors/": {
       "get": {
         "description": "",
         "produces": [
@@ -192,28 +259,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "name": {
                   "example": "any"
                 },
-                "lastName": {
+                "birthYear": {
                   "example": "any"
                 },
-                "email": {
+                "nationality": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "awards": {
                   "example": "any"
                 },
-                "birthday": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "gender": {
-                  "example": "any"
-                },
-                "grade_level": {
+                "numBooksWritten": {
                   "example": "any"
                 }
               }
@@ -227,13 +285,16 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/students/{id}": {
+    "/authors/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -274,28 +335,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "name": {
                   "example": "any"
                 },
-                "lastName": {
+                "birthYear": {
                   "example": "any"
                 },
-                "email": {
+                "nationality": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "awards": {
                   "example": "any"
                 },
-                "birthday": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "gender": {
-                  "example": "any"
-                },
-                "grade_level": {
+                "numBooksWritten": {
                   "example": "any"
                 }
               }
@@ -308,6 +360,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -330,6 +385,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
